feat: cleaning report services
